# image-rag-prototype

./: .gitignore  README.md  WRITEUP.md  presentation.html  pyproject.toml
scripts/: build_index.py  download_coco.py
src/: app.py  config.py  data.py  embed.py  index.py  rag.py  retrieve.py
